# zkaf-r0

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
host/: Cargo.toml
host/fixtures/: example_proof.json  twitter_proof.json  verity_zk_verifier.wasm  zk_params.json
host/src/: main.rs  types.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/.cargo/: config.toml
methods/guest/src/: constants.rs  main.rs  utils.rs
tlsn-substrings-verifier/: Cargo.toml
tlsn-substrings-verifier/src/: lib.rs  merkle.rs  transcript.rs
tlsn-substrings-verifier/src/commitment/: builder.rs  mod.rs
tlsn-substrings-verifier/src/proof/: mod.rs  session.rs  substrings.rs
tlsn-substrings-verifier/src/types/: mod.rs
verifier-wasi/: Cargo.toml  build.sh
verifier-wasi/src/: lib.rs
