[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
p256 = { version = "0.13", features = ["ecdsa"] }
serde = "1.0"
serde_json = "1.0.107"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "6152883" }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
chrono = "0.4.31"
hashbrown = "0.14.3"

methods = { path = "../methods" }
tlsn-substrings-verifier = { path = "../tlsn-substrings-verifier" }
