[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "0.21.0" }
serde = "1.0"
serde_json = "1.0.107"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "6152883" }
p256 = { version = "0.13", features = ["ecdsa"] }
tlsn-substrings-verifier = { path = "../tlsn-substrings-verifier" }

[package.metadata.risc0]
methods = ["guest"]
