[package]
name = "tlsn-substrings-verifier"
authors = ["TLSNotary Team | Usher Labs"]
description = "Core verifier lib for TLSNotary"
keywords = ["tls", "mpc", "2pc", "types"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.5"
edition = "2021"

[dependencies]
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "51f313d" }

mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }

serde = "1"
rs_merkle = "1"
hex = "0.4"
bytes = {version = "1.4", features = ["serde"]}
opaque-debug = "0.3"

bimap = { version = "0.6.3", features = ["serde"] }
hashbrown = "0.14.3"
thiserror-no-std = "2.0.2"

[dev-dependencies]
rand_chacha = "0.3"
rand_core = "0.6"
bincode = "1"
rstest = "0.5"
