[package]
name = "verity_zk_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.107"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.5" }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
getrandom = { version = "0.2" }

[profile.release]
# Optimize for size
opt-level = "s"
lto = true