[package]
name = "zkaf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std"]  }
tlsn-substrings-verifier = { path = "../../tlsn-substrings-verifier" }
serde = "1.0"
serde_json = "1.0.107"
wasmer = "3.1.0"  # Check for the latest version on crates.io
wasmer-wasi = "3.1.0"  # This crate provides WASI specific functionalities
wasmtime = "22.0.0"