[package]
name = "zkaf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std"]  }
# tlsn-substrings-verifier = { path = "../../tlsn-substrings-verifier" }
serde = "1.0"
serde_json = "1.0.107"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.5" }
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }

ring = { path = "../../ring", default-features = false }
